--- a/WebContent/css/forms.css
+++ b/WebContent/css/forms.css
@@ -22,9 +22,11 @@ label{/* Alineacion y propiedades de labels */
 input{/* Alineacion y propiedades de campos de texto */
     width: 200px;
 }
+
 #titulo{/* Alineacion de titulo de form */
     text-align: center;
 }
 #btnEnviar{
-    width: 100px;
+    margin: 0 50px 0 50px;
+    width: 200px;
 }
